--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vue-tsc && vite build",
     "justbuild": "vite build",
     "preview": "vite preview"
@@ -26,10 +26,12 @@
     "@types/file-saver": "^2.0.5",
     "@types/node": "^20.5.8",
     "@vitejs/plugin-vue": "^4.3.4",
+    "fast-glob": "^3.3.1",
     "less": "^4.2.0",
     "path": "^0.12.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.5"
   }
 }
