--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "sortablejs": "^1.15.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
