--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.5.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.12",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
